--- a/.gitignore
+++ b/.gitignore
@@ -18,26 +18,26 @@ DerivedData
 .idea/
 
 # latex
-*.aux
-*.glo
-*.idx
-*.log
-*.toc
-*.ist
-*.acn
-*.acr
-*.alg
-*.bbl
-*.blg
-*.dvi
-*.glg
-*.gls
-*.ilg
-*.ind
-*.lof
-*.lot
-*.maf
-*.mtc
-*.mtc1
-*.out
-*.synctex.gz
+Report/*.aux
+Report/*.glo
+Report/*.idx
+Report/*.log
+Report/*.toc
+Report/*.ist
+Report/*.acn
+Report/*.acr
+Report/*.alg
+Report/*.bbl
+Report/*.blg
+Report/*.dvi
+Report/*.glg
+Report/*.gls
+Report/*.ilg
+Report/*.ind
+Report/*.lof
+Report/*.lot
+Report/*.maf
+Report/*.mtc
+Report/*.mtc1
+Report/*.out
+Report/*.synctex.gz
